First Part/nginx-service-https.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-https-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-central-1:543476919432:certificate/b221b65d-734d-4f71-aba3-34d5f2892425
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 443
      targetPort: 80
