First Part/myIngress-https-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-2
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: my-challenge-app.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-https-service
            port:
              number: 443
